# geolm

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  EXPERIMENTS.md  INTEGRATION.md  INTEGRATION.ru.md  README.md  README.ru.md  TESTING.md  TESTING.ru.md  pyproject.toml
examples/: calculator.py  data.jsonl
experiments/: RESULTS.md  deep_reasoning.py  ple_geometry.py
src/geolm/: __init__.py  cli.py  data.py  model.py  pipeline.py
tests/: test_smoke.py
