[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "geolm"
version = "0.1.0"
description = "Narrow-task geometric language models: token points + recurrent trajectory + nearest-point output"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Max Birkin", email = "maxbirkin@gmail.com" }]
keywords = ["nlp", "sequence-to-sequence", "rnn", "gru", "small-models", "edge", "inference"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["torch>=2.0"]

[project.scripts]
geolm = "geolm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
